Fixed connection handler